# r-ncdf4-build-opendap-windows

./: README.md  build.bat  procedure.rtf  setpath.bat
MINGW-packages/mingw-w64-curl/: curl-7.57.0.tar.bz2.asc  mingw-w64-curl-7.57.0-1-x86_64-build.log.1  mingw-w64-curl-7.57.0-1-x86_64-prepare.log.1  mingw-w64-x86_64-curl-winssl-7.57.0-1-any.pkg.tar.xz
MINGW-packages/mingw-w64-hdf5/: PKGBUILD
ncdf4/: ChangeLog  DESCRIPTION  MD5  cleanup  config.status  configure
ncdf4/man/: ancvar_put.Rd  nc_close.Rd  nc_create.Rd  nc_enddef.Rd  nc_open.Rd  nc_redef.Rd  nc_sync.Rd  nc_version.Rd  ncatt_get.Rd  ncatt_put.Rd  ncdf4-internal.Rd  ncdf4-package.Rd  ncdim_def.Rd  ncvar_add.Rd  ncvar_change_missval.Rd  ncvar_def.Rd  ncvar_get.Rd  ncvar_rename.Rd  print.ncdf4.Rd
ncdf4/src/: Makevars  Makevars.in  Makevars.win  ncdf.c  ncdf2.c  ncdf3.c  src_ncdf4.c
ncdf4/tools/: aclocal.m4  configure.ac  netcdf.m4  regenerate
